# Solana-LST-Program

./: Cargo.toml
client/: README.md  index.test.ts  index.ts
contract/: Cargo.toml
contract/client/: validators.js
contract/src/: instruction.rs
contract/src/instructions/: create_stake_account.rs  merge_stake_accounts.rs
lst_manager/: Cargo.toml  lst_maths.txt
lst_manager/client/: index.test.ts
lst_manager/src/: error.rs  instruction.rs  processor.rs  state.rs
lst_manager/src/instructions/: initialise_lst.rs  mod.rs
src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
src/instructions/: create_manager.rs  create_stake_account.rs  deactivate_stake.rs  delegate_stake.rs  mod.rs  split_stake_accoout.rs  withdraw_stake.rs
stake_manager/client/: index.test.ts
stake_manager/src/: error.rs  lib.rs
stake_manager/src/instructions/: delegate_stake.rs  split_stake_account.rs
