cargo-features = ["edition2024"]
[package]
name = "lst_manager"
version = "0.1.0"
edition = "2024"

[lib]
crate-type=["cdylib" ,"lib"]

[dependencies]
borsh = { version = "1.6.0", features = ["derive"] }
solana-program = {version = "2.3.0"}
spl-token = {version="8.0.0" , features = ["no-entrypoint"]}
thiserror = "2.0.17"
